Hide the keydown handler better and move it out of the infos-container to prevent layout break in safari

--- a/src/KeyInput.css
+++ b/src/KeyInput.css
@@ -7,4 +7,5 @@
 	height: 0;
 
 	position: absolute;
+	z-index: -1;
 }
